Prevent text wrapping in table

--- a/webroot/css/report.less
+++ b/webroot/css/report.less
@@ -1,5 +1,6 @@
 #report {
     background-color: #fff;
+    white-space: nowrap;
 
     &.officials-expanded {
         &.officials-int-alignment-expanded {
